--- a/src/webparts/aadGroupPeople/components/AadGroupPeople.module.scss
+++ b/src/webparts/aadGroupPeople/components/AadGroupPeople.module.scss
@@ -71,4 +71,31 @@
       display: inline-block;
     }
   }
+
+  .personaTile {
+    display: table;
+    width: 30%;
+    float: left;
+    height: 76px;
+    margin: 0 8px;
+  }
+
+  .persona {
+    display: table-row;
+    width: 100%;
+  }
+
+  .persona > div {
+    display: table-cell;
+    vertical-align: middle;
+  }
+
+  .persona > div .ms-Persona-secondaryText > div {
+    display: block;
+    max-width: 85%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
 }
